# gamelibs-zstd

./: .cirrus.yml  Makefile  README.md  meson.build  meson_options.txt  test_allocation_bug.sh
.github/workflows/: android-ndk-build.yml  cmake-tests.yml  commit.yml  dev-long-tests.yml  dev-short-tests.yml  nightly.yml  publish-release-artifacts.yml  release_check.yml  scorecards.yml  windows-artifacts.yml
contrib/largeNbDicts/: largeNbDicts.c
contrib/seekable_format/examples/: Makefile  parallel_compression.c
lib/: README.md  zstd.h
lib/common/: bitstream.h  compiler.h  debug.h  portability_macros.h
lib/compress/: zstd_compress.c  zstd_lazy.c  zstdmt_compress.c
lib/decompress/: huf_decompress_amd64.S  zstd_decompress_block.c
lib/dictBuilder/: cover.c  cover.h
programs/: dibio.c  fileio.c  util.c  util.h  zstd.1.md  zstdcli.c
tests/: bigdict.c  fuzzer.c  largeDictionary.c  playTests.sh  test-zstd-versions.py
tests/cli-tests/basic/: help.sh.stdout.glob
tests/cli-tests/compression/: multi-threaded.sh  multi-threaded.sh.stderr.exact
tests/cli-tests/file-stat/: compress-file-to-dir-without-write-perm.sh.stderr.exact
